# ee-AlphaCLIP

./: pyproject.toml  requirements.txt  setup.py
alpha_clip/: alpha_clip.py
tests/: test_packaging_compat.py
